--- a/css/style.css
+++ b/css/style.css
@@ -36,64 +36,47 @@ p {
 	color: rgb(234, 9, 178);
 }
 
-.footer-basic {
-    padding:40px 0;
-    background-color:#ffffff;
-    color:#4b4c4d;
-  }
-  
-  .footer-basic ul {
-    padding:0;
-    list-style:none;
-    text-align:center;
-    font-size:18px;
-    line-height:1.6;
-    margin-bottom:0;
-  }
-  
-  .footer-basic li {
-    padding:0 10px;
-  }
-  
-  .footer-basic ul a {
-    color:inherit;
-    text-decoration:none;
-    opacity:0.8;
-  }
-  
-  .footer-basic ul a:hover {
-    opacity:1;
-  }
-  
-  .footer-basic .social {
-    text-align:center;
-    padding-bottom:25px;
-  }
-  
-  .footer-basic .social > a {
-    font-size:24px;
-    width:40px;
-    height:40px;
-    line-height:40px;
-    display:inline-block;
-    text-align:center;
-    border-radius:50%;
-    border:1px solid #ccc;
-    margin:0 8px;
-    color:inherit;
-    opacity:0.75;
-  }
-  
-  .footer-basic .social > a:hover {
-    opacity:0.9;
-  }
-  
-  .footer-basic .copyright {
-    margin-top:15px;
-    text-align:center;
-    font-size:13px;
-    color:#aaa;
-    margin-bottom:0;
-  }
-  
-  
+.fa-arrow-right {
+	font-size: 2.5rem;
+	color: #efc8d4;
+}
+.fa-arrow-left {
+	font-size: 2.5rem;
+	color: #efc8d4;
+}
+
+.new-york-times {
+	color: #676264;
+}
+.navbar .navbar-nav .nav-link {
+	color: #fff;
+	font-size: 1.1em;
+	padding-left: 0.5em;
+	padding-right: 0.5em;
+}
+.navbar .navbar-nav .nav-link:hover {
+	color: #efc8d4;
+	opacity: 0.8;
+}
+
+@media screen and (min-width: 992px) {
+	.navbar .navbar-nav .nav-link {
+		padding-left: 2em;
+		padding-right: 3em;
+	}
+	.navbar .navbar-nav .nav-item:not(:last-child) .nav-link {
+		border-right: 3px solid #fff;
+	}
+}
+
+footer .btn {
+	border: 1px solid #4f6f52;
+}
+footer .btn:hover,
+footer .nav-link:hover {
+	color: black;
+}
+
+footer .btn:hover {
+	background-color: #739072;
+}
